# lingmo-icon-engine

./: CMakeLists.txt  README.md  lingmo-iconengine.json
.github/workflows/: package.yml
debian/: changelog  control  copyright  liblingmoiconengine-dev.install  liblingmoiconengine1.install
rpm/: lingmo-icon-engine.spec
src/: main.cpp
